RESOLVED FIXED107971
REGRESSION: System directory prefix doesn't have a "+"
https://bugs.webkit.org/show_bug.cgi?id=107971
Summary REGRESSION: System directory prefix doesn't have a "+"
Alexey Proskuryakov
Reported 2013-01-25 11:43:59 PST
"com.apple.WebKit.NetworkProcesscom.apple.Safari" instead of "com.apple.WebKit.NetworkProcess+com.apple.Safari" now.
Attachments
proposed fix (1.59 KB, patch)
2013-01-25 11:45 PST, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2013-01-25 11:45:29 PST
Created attachment 184785 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-01-25 11:48:00 PST
Note You need to log in before you can comment on or make changes to this bug.