        REGRESSION: System directory prefix doesn't have a "+"         https://bugs.webkit.org/show_bug.cgi?id=107971

Reviewed by Brady Eidson.

        * Shared/mac/ChildProcessMac.mm: (WebKit::ChildProcess::initializeSandbox):
        Re-added the "+".



Canonical link: https://commits.webkit.org/126168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140853 268f45cc-cd09-0410-ab3c-d52691b4dbfc